--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -30,3 +30,38 @@ $dark: #000;
 @mixin easeOut {
   transition: all  0.5s ease-out;
 }
+
+@function set-text-color($color) {
+  @if(lightness($color) > 40) {
+    @return $dark;
+  } @else {
+    @return $light;
+  }
+}
+
+
+//media quieris
+
+@mixin mediaSm {
+  @media screen and (max-width: 576px) {
+    @content;
+  }
+}
+
+@mixin mediaMd {
+  @media screen and (max-width: 768px) {
+    @content;
+  }
+}
+
+@mixin mediaLg {
+  @media screen and (min-width: 769px) and (max-width: 1170px) {
+    @content;
+  }
+}
+
+@mixin mediaXl {
+  @media screen and (min-width: 1171px) {
+    @content;
+  }
+}
